2011-04-05  Luke Macpherson   <macpherson@chromium.org>

        Reviewed by Dimitri Glazkov.

        Implement CSSPropertyDirection in CSSStyleApplyProperty
        https://bugs.webkit.org/show_bug.cgi?id=57608

        No new tests required as no new functionality introduced.

        * css/CSSStyleApplyProperty.cpp:
        Add implementation class for CSSPropertyDirection
        * css/CSSStyleSelector.cpp:
        Remove existing implementation for CSSPropertyDirection
        * css/CSSStyleSelector.h:
        Add getter for element

2011-04-05  Leandro Gracia Gil  <leandrogracia@chromium.org>

        Reviewed by Steve Block.

        Factoring the creation of 'FunctionOnly' callbacks in V8.
        https://bugs.webkit.org/show_bug.cgi?id=57760

        This method creates a template from an existing functionality in V8GeolocationCustom.cpp
        to V8Utilities to be used by the custom bindings of both Geolocation and the Media Stream API.

        No new tests. LayoutTests/fast/dom/Geolocation/argument-types.html

        * bindings/v8/V8Utilities.cpp:
        (WebCore::throwTypeMismatchException):
        * bindings/v8/V8Utilities.h:
        (WebCore::createFunctionOnlyCallback):
        * bindings/v8/custom/V8GeolocationCustom.cpp:
        (WebCore::V8Geolocation::getCurrentPositionCallback):
        (WebCore::V8Geolocation::watchPositionCallback):

2011-04-05  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Andreas Kling.

        Switch from Vector<UChar> to StringBuilder in bindings/
        https://bugs.webkit.org/show_bug.cgi?id=57838

        * bindings/js/JSCSSStyleDeclarationCustom.cpp:
        (WebCore::cssPropertyName):
        * bindings/v8/custom/V8CSSStyleDeclarationCustom.cpp:
        (WebCore::cssPropertyInfo):

2011-04-05  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Andreas Kling.

        Switch from Vector<UChar> to StringBuilder in accessibility/
        https://bugs.webkit.org/show_bug.cgi?id=57837
