@@ -1,3 +1,13 @@
+2011-04-05  Pavel Podivilov  <podivilov@chromium.org>
+
+        Reviewed by Pavel Feldman.
+
+        Web Inspector: go to line dialog highlights wrong line.
+        https://bugs.webkit.org/show_bug.cgi?id=57845
+
+        * inspector/front-end/GoToLineDialog.js:
+        (WebInspector.GoToLineDialog.prototype._highlightSelectedLine):
+
 2011-04-05  Luke Macpherson   <macpherson@chromium.org>
 
         Reviewed by Dimitri Glazkov.
